--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Test Website Portfolio</title>
 </head>
-<body>
+<body class="index-body">
     <h1>Welcome to My Website!</h1>
     <button>
         <a href="/pages/home.html">
