--- a/pages/features.html
+++ b/pages/features.html
@@ -9,5 +9,37 @@
 </head>
 <body>
     <h1 class="ft-h1">What can Moses do?</h1>
+    <p class="small-text">he sucks mostly</p>
+    <div class="lists">
+        <div class="skill-div">
+            <p>Skills</p>
+                <ul>
+                    <li>Can cook (at some extent)</li>
+                    <li>Can program (sort of)</li>
+                    <li>Can bike</li>
+                    <li>Can draw (somewhat)</li>
+                </ul>
+        </div>
+        <div class="interest-div">
+            <p>Interests</p>
+                <ul>
+                    <li>Tech gadgets</li>
+                    <li>Anime</li>
+                    <li>some other things (too lazy to mention)</li>
+                </ul>
+        </div>
+        <div class="knowledge-div">
+            <p>Knowledge</p>
+            <ul>
+                <li>Elementary graduate</li>
+                <li>BSIT enthusiast</li>
+                <li>Progamming novice</li>
+                <li>Software developer wannabe</li>
+            </ul>
+        </div>
+    </div>
+    <button class="go-back-btn">
+        <a href="home.html" class="back-btn"> < </a>
+    </button>
 </body>
 </html>
