--- a/pages/features.html
+++ b/pages/features.html
@@ -16,7 +16,7 @@
                 <ul>
                     <li>Can cook (at some extent)</li>
                     <li>Can program (sort of)</li>
-                    <li>Can bike</li>
+                    <li>Can ride a bike</li>
                     <li>Can draw (somewhat)</li>
                 </ul>
         </div>
@@ -39,7 +39,7 @@
         </div>
     </div>
     <button class="go-back-btn">
-        <a href="home.html" class="back-btn"> < </a>
+        <a href="home.html" class="back-btn"> << </a>
     </button>
 </body>
 </html>
