changes on home and profile pages

--- a/pages/home.html
+++ b/pages/home.html
@@ -8,8 +8,10 @@
     <title>Home Page</title>
 </head>
 <body class="home-body">
-    <h1 class="home-h1">This is Moses' Website</h1>
+    <div class="header">
+        <h1 class="home-h1">This is Moses' Website</h1>
         <p class="home-p">Information and details are provided here.</p>
+    </div>
     <div class="home-div"> 
         <div class="profile-btn">   
             <button class="home-btn">
@@ -21,6 +23,23 @@
                 <a href="features.html" class="div-btn">Features</a>
             </button>
         </div>
-    </div>     
+    </div>  
+    <div class="second-div">
+        <h1>Contact me through:</h1>
+        <div class="contacts">
+            <div class="div-facebook">
+                <h3>Facebook:</h3>
+                <p><a href="https://www.facebook.com/mosesanthony873/" target="_blank">My Facebook Profile</a></p>
+            </div>
+            <div class="div-github">
+                <h3>Github:</h3>
+                <p><a href="https://github.com/EzmosAftUC" target="_blank">My Github Profile</a></p>
+            </div>
+            <div class="div-twitter">
+                <h3>Twitter:</h3>
+                <p><a href="https://twitter.com/_mosheee" target="_blank">My Twitter Profile</a></p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
