--- a/pages/profile.html
+++ b/pages/profile.html
@@ -4,9 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="profile.css">
     <title>Profile Page</title>
 </head>
-<body>
-    <h1>PROFILE PAGE</h1>
+<body class="body">
+    <div class="profile-div">
+        <div class="div-h1">
+            <h1>The creator:</h1>
+        </div>
+        <div class="profile-pic">
+            <img src="/images/profilepic.png" alt="profile pic">
+        </div>
+        <div class="text-div">
+            <h2>Name <br> Moses Anthony Y. Fat</h2>
+            <br>
+            <h2>Age <br> 20 years old</h2>
+            <br>
+            <h2>Address <br> Township, Poog, Toledo City, Cebu</h2>
+            <br>
+            <h2>Webiste <br> wala pa lol</h2>
+            <br>
+            <h2>og uban <br> ambot lang uy</h2>
+        </div>
+    </div>
+    <button class="go-back-btn">
+        <a href="home.html" class="back-btn"> << </a>
+    </button>
 </body>
 </html>
