--- a/pages/features.html
+++ b/pages/features.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1 class="ft-h1">What can Moses do?</h1>
-    <p class="small-text">he sucks mostly</p>
+    <p class="small-text">he sucks at them mostly</p>
     <div class="lists">
         <div class="skill-div">
             <p>Skills</p>
@@ -22,11 +22,12 @@
         </div>
         <div class="interest-div">
             <p>Interests</p>
-                <ul>
-                    <li>Tech gadgets</li>
-                    <li>Anime</li>
-                    <li>some other things (too lazy to mention)</li>
-                </ul>
+                <dl>
+                    <dt>Tech gadgets</dt>
+                    <dt>Anime</dt>
+                    <dt>some other things</dt>
+                        <dd>*too lazy to mention</dd>
+                </dl>
         </div>
         <div class="knowledge-div">
             <p>Knowledge</p>
