--- a/pages/profile.html
+++ b/pages/profile.html
@@ -16,15 +16,17 @@
             <img src="/images/profilepic.png" alt="profile pic">
         </div>
         <div class="text-div">
-            <h2>Name <br> Moses Anthony Y. Fat</h2>
+            <h2>Name</h2>
+                <h4>Moses Anthony Y. Fat</h4>
             <br>
-            <h2>Age <br> 20 years old</h2>
+            <h2>Age</h2>
+                <h4>20 years old</h4>
             <br>
-            <h2>Address <br> Township, Poog, Toledo City, Cebu</h2>
+            <h2>Address</h2>
+                <h4>Township, Poog, Toledo City, Cebu</h4>
             <br>
-            <h2>Webiste <br> wala pa lol</h2>
-            <br>
-            <h2>og uban <br> ambot lang uy</h2>
+            <h2>Email Address</h2>
+                <h4>mosesfat@gmail.com</h4>
         </div>
     </div>
     <button class="go-back-btn">
