with page transitions

--- a/pages/features.html
+++ b/pages/features.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
+<!DOCTYPE html> <!--just do ! automatic html shortcut-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="features.css">
+    <link rel="stylesheet" href="/master.css">
     <title>Feature Page</title>
 </head>
 <body>
@@ -14,7 +15,7 @@
         <div class="skill-div">
             <p>Skills</p>
                 <ul>
-                    <li>Can cook (at some extent)</li>
+                    <li>Can cook (not exactly)</li>
                     <li>Can program (sort of)</li>
                     <li>Can ride a bike</li>
                     <li>Can draw (somewhat)</li>
@@ -22,12 +23,11 @@
         </div>
         <div class="interest-div">
             <p>Interests</p>
-                <dl>
-                    <dt>Tech gadgets</dt>
-                    <dt>Anime</dt>
-                    <dt>some other things</dt>
-                        <dd>*too lazy to mention</dd>
-                </dl>
+                <ul>
+                    <li>Tech gadgets</li>
+                    <li>Anime</li>
+                    <li>some other things (too lazy to mention)</li>
+                </ul>
         </div>
         <div class="knowledge-div">
             <p>Knowledge</p>
@@ -42,5 +42,17 @@
     <button class="go-back-btn">
         <a href="home.html" class="back-btn"> << </a>
     </button>
+    <div class="bottom-div">
+        <h1 class="bottom-h1"> More about me: </h1>
+        <p>I am currently practicing html, css and javascript, basic
+            web development languages. In preparation on learning react.js 
+            and hopefully in the future learn backend technologies. Mobile
+            development is also in my mind, it is a complex and new environment
+            that will surely be a challenge for me. Taking up BSIT in college,
+            feedback and reviews on my projects which can be cloned through my github
+            repositories, are appreciated and will surely help me become a better developer 
+            and soon, be a software engineer. 
+        </p>
+    </div> 
 </body>
 </html>
