--- a/pages/home.html
+++ b/pages/home.html
@@ -5,41 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="/master.css">
     <title>Home Page</title>
 </head>
 <body class="home-body">
-    <div class="header">
-        <h1 class="home-h1">This is Moses' Website</h1>
-        <p class="home-p">Information and details are provided here.</p>
-    </div>
-    <div class="home-div"> 
-        <div class="profile-btn">   
-            <button class="home-btn">
-                <a href="profile.html" class="div-btn">Profile</a>
-            </button>
+        <div class="header">
+            <h1 class="home-h1">This is Moses' Website</h1>
+            <p class="home-p">Information and details are provided here.</p>
         </div>
-        <div class="features-btn">
-            <button class="home-btn">
-                <a href="features.html" class="div-btn">Features</a>
-            </button>
+        <div class="home-div"> 
+            <div class="profile-btn">   
+                <button class="home-btn">
+                    <a href="profile.html" class="div-btn">Profile</a>
+                </button>
+            </div>
+            <div class="features-btn">
+                <button class="home-btn">
+                    <a href="features.html" class="div-btn">Features</a>
+                </button>
+            </div>
+        </div>  
+        <div class="second-div">
+            <h1>Contact me through:</h1>
+            <div class="contacts">
+                <div class="div-facebook">
+                    <h3>Facebook:</h3>
+                    <p><a href="https://www.facebook.com/mosesanthony873/" target="_blank">My Facebook Profile</a></p>
+                </div>
+                <div class="div-github">
+                    <h3>Github:</h3>
+                    <p><a href="https://github.com/EzmosAftUC" target="_blank">My Github Profile</a></p>
+                </div>
+                <div class="div-twitter">
+                    <h3>Twitter:</h3>
+                    <p><a href="https://twitter.com/_mosheee" target="_blank">My Twitter Profile</a></p>
+                </div>
+            </div>
         </div>
-    </div>  
-    <div class="second-div">
-        <h1>Contact me through:</h1>
-        <div class="contacts">
-            <div class="div-facebook">
-                <h3>Facebook:</h3>
-                <p><a href="https://www.facebook.com/mosesanthony873/" target="_blank">My Facebook Profile</a></p>
-            </div>
-            <div class="div-github">
-                <h3>Github:</h3>
-                <p><a href="https://github.com/EzmosAftUC" target="_blank">My Github Profile</a></p>
-            </div>
-            <div class="div-twitter">
-                <h3>Twitter:</h3>
-                <p><a href="https://twitter.com/_mosheee" target="_blank">My Twitter Profile</a></p>
-            </div>
-        </div>
-    </div>
 </body>
 </html>
