--- a/pages/profile.html
+++ b/pages/profile.html
@@ -5,32 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="profile.css">
+    <link rel="stylesheet" href="/master.css">
     <title>Profile Page</title>
 </head>
 <body class="body">
-    <div class="profile-div">
-        <div class="div-h1">
-            <h1>The creator:</h1>
+        <div class="profile-div">
+            <div class="div-h1">
+                <h1>The creator:</h1>
+            </div>
+            <div class="profile-pic">
+                <img src="/images/profile.jpg" alt="profile pic">
+            </div>
+            <div class="text-div">
+                <h2>Name</h2>
+                    <h4>Moses Anthony Y. Fat</h4>
+                <br>
+                <h2>Age</h2>
+                    <h4>20 years old</h4>
+                <br>
+                <h2>Address</h2>
+                    <h4>Township, Poog, Toledo City, Cebu</h4>
+                <br>
+                <h2>Email Address</h2>
+                    <h4>mosesfat@gmail.com</h4>
+            </div>
         </div>
-        <div class="profile-pic">
-            <img src="/images/profilepic.png" alt="profile pic">
-        </div>
-        <div class="text-div">
-            <h2>Name</h2>
-                <h4>Moses Anthony Y. Fat</h4>
-            <br>
-            <h2>Age</h2>
-                <h4>20 years old</h4>
-            <br>
-            <h2>Address</h2>
-                <h4>Township, Poog, Toledo City, Cebu</h4>
-            <br>
-            <h2>Email Address</h2>
-                <h4>mosesfat@gmail.com</h4>
-        </div>
-    </div>
-    <button class="go-back-btn">
-        <a href="home.html" class="back-btn"> << </a>
-    </button>
+        <button class="go-back-btn">
+            <a href="home.html" class="back-btn"> << </a>
+        </button>
 </body>
 </html>
