--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="master.css">
     <title>Test Website Portfolio</title>
 </head>
 <body class="index-body">
-    <h1>Welcome to My Website!</h1>
+        <h1>Welcome to My Website!</h1>
     <button>
-        <a href="/pages/home.html">
+        <a href="/pages//home.html">
             press me to proceed
-        </a> </button>
-    <script src="script.js"></script>
+        </a> 
+    </button>
 </body>
 </html>
 
